--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <!-- <div id="app"></div> -->
+    <h1>Quess the number if you can!!</h1>
+    <form action="" id="form">
+      <p>Enter a number between 0 and 9 then submit</p>
+      <label for="number">Quess a number</label>
+      <input type="number" name="number" id="number" min="0" max="9"><br><br>
+
+      <input type="submit" id="submit" value="Submit">
+    </form>
+    <div>Your score is : <span id="score"> 0 </span></div>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
